--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -23,7 +23,10 @@
     <link rel='stylesheet' type='text/css' href="/Static/css/layout/layout.css">
     <link rel="stylesheet" type="text/css" href="/Static/css/layout/navbar.css">
 
-    <title></title>
+    <title>
+        {% block title %}
+        {% endblock title %}
+    </title>
 
     {% block header %}
     {% endblock header %}
