--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -11,8 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Script dependancies -->
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <!-- Fontawesome dependencies -->
+    <script src="https://kit.fontawesome.com/6914177c07.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -34,33 +34,35 @@
 <body>
 
     <!-- Navbar definition -->
-    <header>
+    <header class="under-popup-content">
         <div class="left-items navbar-item">
             Test
         </div>
-        <h2 class="navbar-title navbar-item">TUSMO</h2>
+        <div class="navbar-title navbar-item">
+            <a class="navbar-link" href="/">TOSMU</a>
+        </div>
         <div class="right-items navbar-item">
-            Test
+            <i class="fa-solid fa-gear navbar-item fa-2xl navbar-link" id="config-button"></i>
         </div>
     </header>
     <!-- Navbar -->
 
 
     <!-- Flash messages definition -->
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center under-popup-content">
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
             </symbol>
             <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"></path>
             </symbol>
         </svg>
 
         <!-- Success flash message -->
         {% with messages = get_flashed_messages(category_filter=["Success"]) %}
             {% if messages %}
-                <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
+                <div class="alert alert-success alert-dismissible fade show d-flex align-items-center under-popup-content" role="alert">
                     <div>
                         {{ messages[0] }}
                     </div>
@@ -72,8 +74,8 @@
         <!-- Errors flash message -->
         {% with messages = get_flashed_messages(category_filter=["Errors"]) %}
             {% if messages %}
-                <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
-                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show under-popup-content" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"></use></svg>
                     <div>
                         {{ messages[0] }}
                     </div>
@@ -85,8 +87,8 @@
         <!-- Warning flash message -->
         {% with messages = get_flashed_messages(category_filter=["Warning"]) %}
             {% if messages %}
-                <div class="alert alert-warning d-flex align-items-center alert-dismissible fade show" role="alert">
-                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                <div class="alert alert-warning d-flex align-items-center alert-dismissible fade show under-popup-content" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"></use></svg>
                     <div>
                         {{ messages[0] }}
                     </div>
